feat(regenerate swagger docs): if routes change then regenerate using chokidar & refactoring
