# modules/_template/routes/index.js
@@ -1,0 +1,16 @@
+const path = '/v1/tests';
+const router = require('express').Router();
+
+module.exports = () => {
+  router.get('/', (_, res) => {
+    /* #swagger.tags = ['.template'] */
+    res.status(200).json({
+      message: 'Get all tests'
+    });
+  });
+
+  return {
+    path,
+    router
+  };
+};
